--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,11 @@ gunicorn==20.1.0
 importlib-metadata==6.0.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
+Mako==1.2.4
 MarkupSafe==2.1.2
 python-dotenv==0.21.1
+SQLAlchemy==2.0.4
+typing_extensions==4.5.0
 Werkzeug==2.2.2
+WTForms==3.0.1
 zipp==3.13.0
